// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Models /> should let the user know a model was deleted 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  color: #ffffff;
  background-color: #d6680b;
  border-radius: 32px;
  font-size: 11px;
  line-height: 15px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.2px;
  padding: 1px;
  padding-left: 6px;
  padding-right: 6px;
  margin-right: 8px;
}

<h2
    className="emotion-0"
  >
    <span
      className="emotion-1"
    >
      beta
    </span>
    Custom Models
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Model deleted.
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          href="/[projectId]/models"
          passHref={true}
        >
          <a
            className="emotion-3"
            onClick={[Function]}
          >
            View all
          </a>
        </Link>
      </li>
      <li
        className="emotion-2"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models/add"
          href="/[projectId]/models/add"
          passHref={true}
        >
          <a
            className="emotion-5"
            onClick={[Function]}
          >
            Create New Model
          </a>
        </Link>
      </li>
    </ul>
  </nav>,
  <ModelsTable
    modelTypes={
      Array [
        Object {
          "deployOnTrainingSet": true,
          "description": "Classify images or documents using a KNN classifier.  This type of model generates a single prediction which can be used to quickly organize assets into general groups.The KNN classifier works with just a single image and label.",
          "label": "Sci-kit Learn KNN Classifier",
          "minConcepts": 0,
          "minExamples": 0,
          "name": "ZVI_KNN_CLASSIFIER",
          "objective": "Label Detection",
          "provider": "Zorroa",
        },
        Object {
          "deployOnTrainingSet": false,
          "description": "Classify images or documents using a custom strained CNN deep learning algorithm.  This type of modelgenerates multiple predictions and can be trained to identify very specific features. The label detection classifier requires at least 2 concepts with 10 labeled images each.",
          "label": "Tensorflow CNN Classifier",
          "minConcepts": 2,
          "minExamples": 10,
          "name": "ZVI_LABEL_DETECTION",
          "objective": "Label Detection",
          "provider": "Zorroa",
        },
        Object {
          "deployOnTrainingSet": true,
          "description": "Upload a Tensorflow model to use for image classification.",
          "label": "Tensorflow2 Keras Image Classifier",
          "minConcepts": 0,
          "minExamples": 0,
          "name": "TF2_IMAGE_CLASSIFIER",
          "objective": "Label Detection",
          "provider": "Google",
        },
        Object {
          "deployOnTrainingSet": true,
          "description": "Utilize Google AutoML to train an image classifier.",
          "label": "Google AutoML Classifier",
          "minConcepts": 2,
          "minExamples": 10,
          "name": "GCP_LABEL_DETECTION",
          "objective": "Label Detection",
          "provider": "Google",
        },
      ]
    }
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
]
`;

exports[`<Models /> should let the user start labeling 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  color: #ffffff;
  background-color: #d6680b;
  border-radius: 32px;
  font-size: 11px;
  line-height: 15px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.2px;
  padding: 1px;
  padding-left: 6px;
  padding-right: 6px;
  margin-right: 8px;
}

<h2
    className="emotion-0"
  >
    <span
      className="emotion-1"
    >
      beta
    </span>
    Custom Models
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Model created.
         
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
          href="/[projectId]/visualizer"
          passHref={true}
        >
          <a
            onClick={[Function]}
          >
            Start Labeling
          </a>
        </Link>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          href="/[projectId]/models"
          passHref={true}
        >
          <a
            className="emotion-3"
            onClick={[Function]}
          >
            View all
          </a>
        </Link>
      </li>
      <li
        className="emotion-2"
      >
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/models/add"
          href="/[projectId]/models/add"
          passHref={true}
        >
          <a
            className="emotion-5"
            onClick={[Function]}
          >
            Create New Model
          </a>
        </Link>
      </li>
    </ul>
  </nav>,
  <ModelsTable
    modelTypes={
      Array [
        Object {
          "deployOnTrainingSet": true,
          "description": "Classify images or documents using a KNN classifier.  This type of model generates a single prediction which can be used to quickly organize assets into general groups.The KNN classifier works with just a single image and label.",
          "label": "Sci-kit Learn KNN Classifier",
          "minConcepts": 0,
          "minExamples": 0,
          "name": "ZVI_KNN_CLASSIFIER",
          "objective": "Label Detection",
          "provider": "Zorroa",
        },
        Object {
          "deployOnTrainingSet": false,
          "description": "Classify images or documents using a custom strained CNN deep learning algorithm.  This type of modelgenerates multiple predictions and can be trained to identify very specific features. The label detection classifier requires at least 2 concepts with 10 labeled images each.",
          "label": "Tensorflow CNN Classifier",
          "minConcepts": 2,
          "minExamples": 10,
          "name": "ZVI_LABEL_DETECTION",
          "objective": "Label Detection",
          "provider": "Zorroa",
        },
        Object {
          "deployOnTrainingSet": true,
          "description": "Upload a Tensorflow model to use for image classification.",
          "label": "Tensorflow2 Keras Image Classifier",
          "minConcepts": 0,
          "minExamples": 0,
          "name": "TF2_IMAGE_CLASSIFIER",
          "objective": "Label Detection",
          "provider": "Google",
        },
        Object {
          "deployOnTrainingSet": true,
          "description": "Utilize Google AutoML to train an image classifier.",
          "label": "Google AutoML Classifier",
          "minConcepts": 2,
          "minExamples": 10,
          "name": "GCP_LABEL_DETECTION",
          "objective": "Label Detection",
          "provider": "Google",
        },
      ]
    }
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
]
`;
